# nvm-rust

./: .gitignore  Cargo.toml  LICENSE  README.ZH_CN.md  README.md  build.rs  install.ps1  install.sh  nvm.sh
.github/workflows/: ci.yml  release.yml
homebrew/: nvm-rust-binary.rb  nvm-rust.rb
locales/: cn.toml  en.toml
shell/: nvm.fish  nvm.psm1  nvm.sh
src/: cli.rs  commands.rs  completions.rs  config.rs  corepack.rs  download.rs  extract.rs  i18n.rs  main.rs  proxy.rs  system.rs  utils.rs
src/commands/: info.rs  install.rs  listing.rs  migrate.rs  mod.rs  version_resolve.rs
tests/: alias_mirror_proxy.rs  cache.rs  completion_corepack.rs  help.rs  info_commands.rs  language.rs  migrate_packages.rs  run_exec_which.rs  use_uninstall.rs  version.rs
tests/common/: mod.rs
