[package]
name = "nvm"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
tempfile = "3"

[dependencies]
# CLI argument parsing
clap = { version = "4.5.4", features = ["derive"] }
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "charset", "socks"] }
# HTML parser
scraper = "0.19.0"
# Cross-platform system info
sysinfo = "0.30.12"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TOML parsing for i18n locale files
toml = "0.8"
# Archive extraction
tar = "0.4"
xz2 = { version = "0.1", features = ["static"] }
# Progress bar
indicatif = "0.17"
# Error handling
anyhow = "1.0"
# Regular expressions
regex = "1.10"
# SHA256 checksum
sha2 = "0.10"
# Terminal colors
colored = "2.1"
# Lazy static for i18n
lazy_static = "1.4"